--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
                         origin: { y: 0.6 }
                     });
                 }
-                showMessage("I knew it! Happy birthday and thank you for being you! ❤️");
+                showMessage("I knew it! Happyyy birthhdayy myy kuchuu puchuuu pookiee babyyyyy i loveee youu mwahhhhhh enjoyyy youurr dayyy myy pookiiieee cookiee❤️");
             });
 
             // Event listener to close the message box
